# house-pricing-prediction-kaggle

./: .gitignore  House_Prices_Report_EN_Final_v4.docx  README.md  analyze.ipynb  app.py  best_model.joblib  data_exploration.ipynb  data_exploration_v2.ipynb  df_no_outliers.csv  environment.yaml  feature_model_selection.ipynb  finding_the_best_model.py  outliers.ipynb  project copy.ipynb  project.ipynb  project.py  pyproject.toml  submission.csv  train.ipynb
data/: .~lock.train.csv#  cleaned_test.csv  cleaned_train.csv  data_description.md  data_exploration.md  findings.docx  project_presentation_template.pptx  project_template_en.docx
results/: submission.csv
